--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="over__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ratione eligendi rem aperiam quos sint aliquid, et perferendis ab adipisci hic asperiores vero nisi? Facere at consequatur nostrum exercitationem quos?
                 Beatae alias, commodi iure provident, aperiam totam aspernatur necessitatibus, harum quasi velit nulla sapiente voluptas aliquam! Ad voluptas omnis labore aperiam nisi eveniet, at dicta. Animi voluptas in nobis praesentium!</p>
                 <p class="over__p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ratione eligendi rem aperiam quos sint aliquid, et perferendis ab adipisci hic asperiores vero nisi? Facere at consequatur nostrum exercitationem quos?
-                    Beatae alias, commodi iure provident, aperiam totam aspernatur necessitatibus, harum quasi velit nulla sapiente voluptas aliquam! Ad voluptas omnis labore aperiam nisi eveniet, at dicta. Animi voluptas in nobis praesentium!</p>
+                    Beatae alias, commodi iure provident, aperiam totam aspernatur necessitatibus, harum quasi velit nullaa sapiente voluptas aliquam! Ad voluptas omnis labore aperiam nisi eveniet, at dicta. Animi voluptas in nobis praesentium!</p>
             </div>
             <figure class="over__figure">
                 <img src="img/over.webp" alt="" class="over__img">
